header overflow fix

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -175,6 +175,7 @@
   flex-wrap: wrap;
   padding: 21px 0 17px 12px;
   margin-top: 12px;
+  order: 99;
 
   &::before {
     position: absolute;
